--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,7 @@ body {
   width: 100%;
   padding: 15px 16px;
   background-color: transparent;
+  z-index: 2;
 }
 .header--scroll {
   background-color: rgba(0, 0, 0, 0.8);
@@ -795,7 +796,6 @@ body {
     padding-top: 70px;
     display: flex;
     gap: 120px;
-    min-width: 0;
   }
 }
 
@@ -815,9 +815,18 @@ body {
 }
 @media (min-width: 1200px) {
   .testimonial__wrapper {
+    width: calc(100% - 70px - 364px);
     margin-top: 0;
     justify-content: space-between;
   }
+}
+
+.testimonial-slider {
+  overflow: hidden;
+}
+.testimonial-slider .swiper-pagination-bullet {
+  background-color: var(--btn-color);
+  border-radius: 0%;
 }
 
 .testimonial__info {
