--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,7 @@
     width: 100%;
     padding: 15px 16px;
     background-color: transparent;
+    z-index: 2;
 
     &--scroll {
         background-color: rgba(0, 0, 0, 0.8);
