--- a/sass/components/_testomonials.scss
+++ b/sass/components/_testomonials.scss
@@ -8,8 +8,6 @@
         padding-top: 70px;
         display: flex;
         gap: 120px;
-
-        min-width: 0;
     }
 }
 
@@ -27,8 +25,18 @@
     margin-top: 40px;
 
     @include desktop {
+        width: calc(100% - 70px - 364px);
         margin-top: 0;
         justify-content: space-between;
+    }
+}
+
+.testimonial-slider {
+    overflow: hidden;
+
+    & .swiper-pagination-bullet {
+        background-color: var(--btn-color);
+        border-radius: 0%;
     }
 }
 
