--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -46,16 +46,16 @@
 
 .portfolio__list {
     display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
+    // flex-wrap: wrap;
+    // gap: 24px;
 }
 
-.portfolio__item {
-    width: 100%;
-    @include desktop {
-        flex-basis: calc((100% - 48px) / 3);
-    }
-}
+// .portfolio__item {
+//     width: 100%;
+//     @include desktop {
+//         flex-basis: calc((100% - 48px) / 3);
+//     }
+// }
 
 .portfolio__item-link {
     display: block;
