--- a/css/main.css
+++ b/css/main.css
@@ -609,6 +609,11 @@ body {
 .stacks__download-button:hover {
   transform: scale(1.1);
 }
+.stacks__download-button--modal {
+  margin-top: 15px;
+  color: var(--dark-text-color);
+  font-weight: 500;
+}
 
 .stacks__download-icon {
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -1043,7 +1048,10 @@ body {
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
   position: relative;
+  justify-content: center;
   width: 100%;
   height: 609px;
   padding: 40px;
@@ -1112,4 +1120,144 @@ body {
 
 .close-btn__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__title {
+  display: block;
+  margin-bottom: 12px;
+  font-size: 19px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--dark-title-color);
+}
+@media screen and (min-width: 480px) {
+  .modal__title {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
+}
+
+/* .modal-form{} */
+.modal-form__field {
+  margin: 0 auto 10px auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.modal-form__field:nth-of-type(4n) {
+  margin-bottom: 20px;
+}
+
+.modal-form__input-wrap {
+  position: relative;
+}
+
+.modal-form__contact-label {
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+}
+
+.modal-form__input {
+  width: 100%;
+  height: 40px;
+  max-width: 448px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+  color: #000000;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form__input--left-padding {
+  padding-left: 42px;
+}
+.modal-form__input:hover {
+  border-color: var(--active-link-color);
+}
+.modal-form__input:focus {
+  border-color: var(--active-link-color);
+}
+
+.modal-form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form__input:hover + .modal-form__icon {
+  fill: var(--active-link-color);
+}
+.modal-form__input:focus + .modal-form__icon {
+  fill: var(--active-link-color);
+}
+.modal-form__input:not(:-moz-placeholder-shown) + .modal-form__icon {
+  fill: var(--active-link-color);
+}
+.modal-form__input:not(:-ms-input-placeholder) + .modal-form__icon {
+  fill: var(--active-link-color);
+}
+.modal-form__input:not(:placeholder-shown) + .modal-form__icon {
+  fill: var(--active-link-color);
+}
+
+.modal-form__comment {
+  resize: none;
+  height: 120px;
+}
+.modal-form__comment::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form__comment:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form__comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form__policy {
+  margin-bottom: 30px;
+}
+
+.modal-form__btn {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  padding: 10px 52px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--btn-text);
+  text-align: center;
+  background-color: var(--btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form__btn:hover {
+  background-color: var(--btn-color-hover);
+}
+.modal-form__btn:focus {
+  background-color: var(--btn-color-hover);
 }/*# sourceMappingURL=main.css.map */
