--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -21,7 +21,10 @@
 }
 
 .modal {
+    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: center;
 
     width: 100%;
     height: 609px;
@@ -95,4 +98,25 @@
 
 .close-btn__icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__title {
+    display: block;
+
+    margin-bottom: 12px;
+
+    font-size: 19px;
+    line-height: calc(30 / 20);
+    letter-spacing: 0.03em;
+    text-align: center;
+
+    color: var(--dark-title-color);
+
+    @media screen and (min-width: 480px) {
+        font-size: 20px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        line-height: calc(23 / 20);
+    }
 }
