--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -80,6 +80,12 @@
     &:hover {
         transform: scale(1.1);
     }
+
+    &--modal {
+        margin-top: 15px;
+        color: var(--dark-text-color);
+        font-weight: 500;
+    }
 }
 
 .stacks__download-icon {
